program6.output
State 128 conflicts: 2 shift/reduce
State 132 conflicts: 1 shift/reduce
State 206 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: classdeclaraton
    2        | program classdeclaraton

    3 classdeclaraton: classstart classbody

    4 classstart: CLASS ident

    5 classbody: LBRACE RBRACE
    6          | LBRACE vardecs constdecs methdecs RBRACE
    7          | LBRACE vardecs constdecs RBRACE
    8          | LBRACE vardecs methdecs RBRACE
    9          | LBRACE vardecs error RBRACE
   10          | LBRACE constdecs methdecs RBRACE
   11          | LBRACE vardecs RBRACE
   12          | LBRACE constdecs RBRACE
   13          | LBRACE methdecs RBRACE

   14 vardecs: vardeclaration
   15        | vardecs vardeclaration

   16 constdecs: consstart consbody
   17          | constdecs consstart consbody

   18 methdecs: methstart methbody
   19         | methdecs methstart methbody

   20 vardeclaration: type ident SEMI
   21               | ident ident SEMI
   22               | type brackexps ident SEMI
   23               | ident brackexps ident SEMI

   24 consstart: ident LPAREN

   25 consbody: parameterlist RPAREN block

   26 methbody: parameterlist RPAREN block

   27 methstart: type ident LPAREN
   28          | ident ident LPAREN
   29          | VOID ident LPAREN

   30 type: INT

   31 ident: ID

   32 number: NUM

   33 parameterlist: %empty
   34              | parameter
   35              | parameterlist COMMA parameter

   36 parameter: type ident
   37          | ident ident

   38 block: LBRACE RBRACE
   39      | LBRACE vardecs statements RBRACE
   40      | LBRACE vardecs RBRACE
   41      | LBRACE statements RBRACE
   42      | LBRACE error RBRACE

   43 statements: statement
   44           | statements statement

   45 statement: SEMI
   46          | name EQUAL expression SEMI
   47          | name LPAREN arglist RPAREN SEMI
   48          | PRINT LPAREN arglist RPAREN SEMI
   49          | conditionalstatement
   50          | WHILE LPAREN expression RPAREN statement SEMI
   51          | RETURN expression
   52          | RETURN
   53          | blockstacked

   54 blockstart: LBRACE

   55 blockstacked: blockstart RBRACE
   56             | blockstart vardecs statements RBRACE
   57             | blockstart vardecs RBRACE
   58             | blockstart statements RBRACE
   59             | blockstart error RBRACE

   60 name: THIS
   61     | ident
   62     | name DOT ident
   63     | name LBRACK expression RBRACK
   64     | name DOT THIS

   65 arglist: %empty
   66        | expression
   67        | arglist COMMA expression

   68 conditionalstatement: IF LPAREN expression RPAREN statement
   69                     | IF LPAREN expression RPAREN statement ELSE statement

   70 expression: name
   71           | number
   72           | NULLT
   73           | name LPAREN arglist RPAREN
   74           | expression PLUS expression
   75           | expression MINUS expression
   76           | expression TIMES expression
   77           | expression DIV expression
   78           | expression EXP expression
   79           | MINUS expression
   80           | READ LPAREN RPAREN
   81           | expression OR expression
   82           | expression EQ expression
   83           | expression NE expression
   84           | expression GE expression
   85           | expression LE expression
   86           | expression GT expression
   87           | expression LT expression
   88           | PLUS expression
   89           | NOT expression
   90           | expression MOD expression
   91           | expression AND expression
   92           | expression EQUAL expression
   93           | newexpression
   94           | LPAREN expression RPAREN

   95 newexpression: NEW ident LPAREN arglist RPAREN
   96              | NEW type
   97              | NEW type brackexps
   98              | NEW error
   99              | NEW ident
  100              | NEW ident brackexps

  101 brackexps: LBRACK expression RBRACK
  102          | LBRACK expression RBRACK brackexps
  103          | multibracks

  104 multibracks: LBRACK RBRACK
  105            | multibracks LBRACK RBRACK


Terminals, with rules where they appear

$end (0) 0
error (256) 9 42 59 98
NUM (258) 32
RPAREN (259) 25 26 47 48 50 68 69 73 80 94 95
LPAREN (260) 24 27 28 29 47 48 50 68 69 73 80 94 95
LBRACK (261) 63 101 102 104 105
RBRACK (262) 63 101 102 104 105
LBRACE (263) 5 6 7 8 9 10 11 12 13 38 39 40 41 42 54
RBRACE (264) 5 6 7 8 9 10 11 12 13 38 39 40 41 42 55 56 57 58 59
NULLT (265) 72
READ (266) 80
NEW (267) 95 96 97 98 99 100
DOT (268) 62 64
THIS (269) 60 64
SEMI (270) 20 21 22 23 45 46 47 48 50
ID (271) 31
INT (272) 30
CLASS (273) 4
VOID (274) 29
COMMA (275) 35 67
PRINT (276) 48
WHILE (277) 50
RETURN (278) 51 52
IF (279) 68 69
ELSE (280) 69
PLUS (281) 74 88
MINUS (282) 75 79
TIMES (283) 76
DIV (284) 77
MOD (285) 90
AND (286) 91
OR (287) 81
NOT (288) 89
EQ (289) 82
NE (290) 83
LE (291) 85
GE (292) 84
LT (293) 87
GT (294) 86
NEG (295)
UPLUS (296)
EXP (297) 78
EQUAL (298) 46 92


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
program (45)
    on left: 1 2, on right: 0 2
classdeclaraton (46)
    on left: 3, on right: 1 2
classstart (47)
    on left: 4, on right: 3
classbody (48)
    on left: 5 6 7 8 9 10 11 12 13, on right: 3
vardecs (49)
    on left: 14 15, on right: 6 7 8 9 11 15 39 40 56 57
constdecs (50)
    on left: 16 17, on right: 6 7 10 12 17
methdecs (51)
    on left: 18 19, on right: 6 8 10 13 19
vardeclaration (52)
    on left: 20 21 22 23, on right: 14 15
consstart (53)
    on left: 24, on right: 16 17
consbody (54)
    on left: 25, on right: 16 17
methbody (55)
    on left: 26, on right: 18 19
methstart (56)
    on left: 27 28 29, on right: 18 19
type (57)
    on left: 30, on right: 20 22 27 36 96 97
ident (58)
    on left: 31, on right: 4 20 21 22 23 24 27 28 29 36 37 61 62 95
    99 100
number (59)
    on left: 32, on right: 71
parameterlist (60)
    on left: 33 34 35, on right: 25 26 35
parameter (61)
    on left: 36 37, on right: 34 35
block (62)
    on left: 38 39 40 41 42, on right: 25 26
statements (63)
    on left: 43 44, on right: 39 41 44 56 58
statement (64)
    on left: 45 46 47 48 49 50 51 52 53, on right: 43 44 50 68 69
blockstart (65)
    on left: 54, on right: 55 56 57 58 59
blockstacked (66)
    on left: 55 56 57 58 59, on right: 53
name (67)
    on left: 60 61 62 63 64, on right: 46 47 62 63 64 70 73
arglist (68)
    on left: 65 66 67, on right: 47 48 67 73 95
conditionalstatement (69)
    on left: 68 69, on right: 49
expression (70)
    on left: 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87
    88 89 90 91 92 93 94, on right: 46 50 51 63 66 67 68 69 74 75 76
    77 78 79 81 82 83 84 85 86 87 88 89 90 91 92 94 101 102
newexpression (71)
    on left: 95 96 97 98 99 100, on right: 93
brackexps (72)
    on left: 101 102 103, on right: 22 23 97 100 102
multibracks (73)
    on left: 104 105, on right: 103 105


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program          go to state 2
    classdeclaraton  go to state 3
    classstart       go to state 4


State 1

    4 classstart: CLASS . ident

    ID  shift, and go to state 5

    ident  go to state 6


State 2

    0 $accept: program . $end
    2 program: program . classdeclaraton

    $end   shift, and go to state 7
    CLASS  shift, and go to state 1

    classdeclaraton  go to state 8
    classstart       go to state 4


State 3

    1 program: classdeclaraton .

    $default  reduce using rule 1 (program)


State 4

    3 classdeclaraton: classstart . classbody

    LBRACE  shift, and go to state 9

    classbody  go to state 10


State 5

   31 ident: ID .

    $default  reduce using rule 31 (ident)


State 6

    4 classstart: CLASS ident .

    $default  reduce using rule 4 (classstart)


State 7

    0 $accept: program $end .

    $default  accept


State 8

    2 program: program classdeclaraton .

    $default  reduce using rule 2 (program)


State 9

    5 classbody: LBRACE . RBRACE
    6          | LBRACE . vardecs constdecs methdecs RBRACE
    7          | LBRACE . vardecs constdecs RBRACE
    8          | LBRACE . vardecs methdecs RBRACE
    9          | LBRACE . vardecs error RBRACE
   10          | LBRACE . constdecs methdecs RBRACE
   11          | LBRACE . vardecs RBRACE
   12          | LBRACE . constdecs RBRACE
   13          | LBRACE . methdecs RBRACE

    RBRACE  shift, and go to state 11
    ID      shift, and go to state 5
    INT     shift, and go to state 12
    VOID    shift, and go to state 13

    vardecs         go to state 14
    constdecs       go to state 15
    methdecs        go to state 16
    vardeclaration  go to state 17
    consstart       go to state 18
    methstart       go to state 19
    type            go to state 20
    ident           go to state 21


State 10

    3 classdeclaraton: classstart classbody .

    $default  reduce using rule 3 (classdeclaraton)


State 11

    5 classbody: LBRACE RBRACE .

    $default  reduce using rule 5 (classbody)


State 12

   30 type: INT .

    $default  reduce using rule 30 (type)


State 13

   29 methstart: VOID . ident LPAREN

    ID  shift, and go to state 5

    ident  go to state 22


State 14

    6 classbody: LBRACE vardecs . constdecs methdecs RBRACE
    7          | LBRACE vardecs . constdecs RBRACE
    8          | LBRACE vardecs . methdecs RBRACE
    9          | LBRACE vardecs . error RBRACE
   11          | LBRACE vardecs . RBRACE
   15 vardecs: vardecs . vardeclaration

    error   shift, and go to state 23
    RBRACE  shift, and go to state 24
    ID      shift, and go to state 5
    INT     shift, and go to state 12
    VOID    shift, and go to state 13

    constdecs       go to state 25
    methdecs        go to state 26
    vardeclaration  go to state 27
    consstart       go to state 18
    methstart       go to state 19
    type            go to state 20
    ident           go to state 21


State 15

   10 classbody: LBRACE constdecs . methdecs RBRACE
   12          | LBRACE constdecs . RBRACE
   17 constdecs: constdecs . consstart consbody

    RBRACE  shift, and go to state 28
    ID      shift, and go to state 5
    INT     shift, and go to state 12
    VOID    shift, and go to state 13

    methdecs   go to state 29
    consstart  go to state 30
    methstart  go to state 19
    type       go to state 31
    ident      go to state 32


State 16

   13 classbody: LBRACE methdecs . RBRACE
   19 methdecs: methdecs . methstart methbody

    RBRACE  shift, and go to state 33
    ID      shift, and go to state 5
    INT     shift, and go to state 12
    VOID    shift, and go to state 13

    methstart  go to state 34
    type       go to state 31
    ident      go to state 35


State 17

   14 vardecs: vardeclaration .

    $default  reduce using rule 14 (vardecs)


State 18

   16 constdecs: consstart . consbody

    ID   shift, and go to state 5
    INT  shift, and go to state 12

    $default  reduce using rule 33 (parameterlist)

    consbody       go to state 36
    type           go to state 37
    ident          go to state 38
    parameterlist  go to state 39
    parameter      go to state 40


State 19

   18 methdecs: methstart . methbody

    ID   shift, and go to state 5
    INT  shift, and go to state 12

    $default  reduce using rule 33 (parameterlist)

    methbody       go to state 41
    type           go to state 37
    ident          go to state 38
    parameterlist  go to state 42
    parameter      go to state 40


State 20

   20 vardeclaration: type . ident SEMI
   22               | type . brackexps ident SEMI
   27 methstart: type . ident LPAREN

    LBRACK  shift, and go to state 43
    ID      shift, and go to state 5

    ident        go to state 44
    brackexps    go to state 45
    multibracks  go to state 46


State 21

   21 vardeclaration: ident . ident SEMI
   23               | ident . brackexps ident SEMI
   24 consstart: ident . LPAREN
   28 methstart: ident . ident LPAREN

    LPAREN  shift, and go to state 47
    LBRACK  shift, and go to state 43
    ID      shift, and go to state 5

    ident        go to state 48
    brackexps    go to state 49
    multibracks  go to state 46


State 22

   29 methstart: VOID ident . LPAREN

    LPAREN  shift, and go to state 50


State 23

    9 classbody: LBRACE vardecs error . RBRACE

    RBRACE  shift, and go to state 51


State 24

   11 classbody: LBRACE vardecs RBRACE .

    $default  reduce using rule 11 (classbody)


State 25

    6 classbody: LBRACE vardecs constdecs . methdecs RBRACE
    7          | LBRACE vardecs constdecs . RBRACE
   17 constdecs: constdecs . consstart consbody

    RBRACE  shift, and go to state 52
    ID      shift, and go to state 5
    INT     shift, and go to state 12
    VOID    shift, and go to state 13

    methdecs   go to state 53
    consstart  go to state 30
    methstart  go to state 19
    type       go to state 31
    ident      go to state 32


State 26

    8 classbody: LBRACE vardecs methdecs . RBRACE
   19 methdecs: methdecs . methstart methbody

    RBRACE  shift, and go to state 54
    ID      shift, and go to state 5
    INT     shift, and go to state 12
    VOID    shift, and go to state 13

    methstart  go to state 34
    type       go to state 31
    ident      go to state 35


State 27

   15 vardecs: vardecs vardeclaration .

    $default  reduce using rule 15 (vardecs)


State 28

   12 classbody: LBRACE constdecs RBRACE .

    $default  reduce using rule 12 (classbody)


State 29

   10 classbody: LBRACE constdecs methdecs . RBRACE
   19 methdecs: methdecs . methstart methbody

    RBRACE  shift, and go to state 55
    ID      shift, and go to state 5
    INT     shift, and go to state 12
    VOID    shift, and go to state 13

    methstart  go to state 34
    type       go to state 31
    ident      go to state 35


State 30

   17 constdecs: constdecs consstart . consbody

    ID   shift, and go to state 5
    INT  shift, and go to state 12

    $default  reduce using rule 33 (parameterlist)

    consbody       go to state 56
    type           go to state 37
    ident          go to state 38
    parameterlist  go to state 39
    parameter      go to state 40


State 31

   27 methstart: type . ident LPAREN

    ID  shift, and go to state 5

    ident  go to state 57


State 32

   24 consstart: ident . LPAREN
   28 methstart: ident . ident LPAREN

    LPAREN  shift, and go to state 47
    ID      shift, and go to state 5

    ident  go to state 58


State 33

   13 classbody: LBRACE methdecs RBRACE .

    $default  reduce using rule 13 (classbody)


State 34

   19 methdecs: methdecs methstart . methbody

    ID   shift, and go to state 5
    INT  shift, and go to state 12

    $default  reduce using rule 33 (parameterlist)

    methbody       go to state 59
    type           go to state 37
    ident          go to state 38
    parameterlist  go to state 42
    parameter      go to state 40


State 35

   28 methstart: ident . ident LPAREN

    ID  shift, and go to state 5

    ident  go to state 58


State 36

   16 constdecs: consstart consbody .

    $default  reduce using rule 16 (constdecs)


State 37

   36 parameter: type . ident

    ID  shift, and go to state 5

    ident  go to state 60


State 38

   37 parameter: ident . ident

    ID  shift, and go to state 5

    ident  go to state 61


State 39

   25 consbody: parameterlist . RPAREN block
   35 parameterlist: parameterlist . COMMA parameter

    RPAREN  shift, and go to state 62
    COMMA   shift, and go to state 63


State 40

   34 parameterlist: parameter .

    $default  reduce using rule 34 (parameterlist)


State 41

   18 methdecs: methstart methbody .

    $default  reduce using rule 18 (methdecs)


State 42

   26 methbody: parameterlist . RPAREN block
   35 parameterlist: parameterlist . COMMA parameter

    RPAREN  shift, and go to state 64
    COMMA   shift, and go to state 63


State 43

  101 brackexps: LBRACK . expression RBRACK
  102          | LBRACK . expression RBRACK brackexps
  104 multibracks: LBRACK . RBRACK

    NUM     shift, and go to state 65
    LPAREN  shift, and go to state 66
    RBRACK  shift, and go to state 67
    NULLT   shift, and go to state 68
    READ    shift, and go to state 69
    NEW     shift, and go to state 70
    THIS    shift, and go to state 71
    ID      shift, and go to state 5
    PLUS    shift, and go to state 72
    MINUS   shift, and go to state 73
    NOT     shift, and go to state 74

    ident          go to state 75
    number         go to state 76
    name           go to state 77
    expression     go to state 78
    newexpression  go to state 79


State 44

   20 vardeclaration: type ident . SEMI
   27 methstart: type ident . LPAREN

    LPAREN  shift, and go to state 80
    SEMI    shift, and go to state 81


State 45

   22 vardeclaration: type brackexps . ident SEMI

    ID  shift, and go to state 5

    ident  go to state 82


State 46

  103 brackexps: multibracks .
  105 multibracks: multibracks . LBRACK RBRACK

    LBRACK  shift, and go to state 83

    $default  reduce using rule 103 (brackexps)


State 47

   24 consstart: ident LPAREN .

    $default  reduce using rule 24 (consstart)


State 48

   21 vardeclaration: ident ident . SEMI
   28 methstart: ident ident . LPAREN

    LPAREN  shift, and go to state 84
    SEMI    shift, and go to state 85


State 49

   23 vardeclaration: ident brackexps . ident SEMI

    ID  shift, and go to state 5

    ident  go to state 86


State 50

   29 methstart: VOID ident LPAREN .

    $default  reduce using rule 29 (methstart)


State 51

    9 classbody: LBRACE vardecs error RBRACE .

    $default  reduce using rule 9 (classbody)


State 52

    7 classbody: LBRACE vardecs constdecs RBRACE .

    $default  reduce using rule 7 (classbody)


State 53

    6 classbody: LBRACE vardecs constdecs methdecs . RBRACE
   19 methdecs: methdecs . methstart methbody

    RBRACE  shift, and go to state 87
    ID      shift, and go to state 5
    INT     shift, and go to state 12
    VOID    shift, and go to state 13

    methstart  go to state 34
    type       go to state 31
    ident      go to state 35


State 54

    8 classbody: LBRACE vardecs methdecs RBRACE .

    $default  reduce using rule 8 (classbody)


State 55

   10 classbody: LBRACE constdecs methdecs RBRACE .

    $default  reduce using rule 10 (classbody)


State 56

   17 constdecs: constdecs consstart consbody .

    $default  reduce using rule 17 (constdecs)


State 57

   27 methstart: type ident . LPAREN

    LPAREN  shift, and go to state 80


State 58

   28 methstart: ident ident . LPAREN

    LPAREN  shift, and go to state 84


State 59

   19 methdecs: methdecs methstart methbody .

    $default  reduce using rule 19 (methdecs)


State 60

   36 parameter: type ident .

    $default  reduce using rule 36 (parameter)


State 61

   37 parameter: ident ident .

    $default  reduce using rule 37 (parameter)


State 62

   25 consbody: parameterlist RPAREN . block

    LBRACE  shift, and go to state 88

    block  go to state 89


State 63

   35 parameterlist: parameterlist COMMA . parameter

    ID   shift, and go to state 5
    INT  shift, and go to state 12

    type       go to state 37
    ident      go to state 38
    parameter  go to state 90


State 64

   26 methbody: parameterlist RPAREN . block

    LBRACE  shift, and go to state 88

    block  go to state 91


State 65

   32 number: NUM .

    $default  reduce using rule 32 (number)


State 66

   94 expression: LPAREN . expression RPAREN

    NUM     shift, and go to state 65
    LPAREN  shift, and go to state 66
    NULLT   shift, and go to state 68
    READ    shift, and go to state 69
    NEW     shift, and go to state 70
    THIS    shift, and go to state 71
    ID      shift, and go to state 5
    PLUS    shift, and go to state 72
    MINUS   shift, and go to state 73
    NOT     shift, and go to state 74

    ident          go to state 75
    number         go to state 76
    name           go to state 77
    expression     go to state 92
    newexpression  go to state 79


State 67

  104 multibracks: LBRACK RBRACK .

    $default  reduce using rule 104 (multibracks)


State 68

   72 expression: NULLT .

    $default  reduce using rule 72 (expression)


State 69

   80 expression: READ . LPAREN RPAREN

    LPAREN  shift, and go to state 93


State 70

   95 newexpression: NEW . ident LPAREN arglist RPAREN
   96              | NEW . type
   97              | NEW . type brackexps
   98              | NEW . error
   99              | NEW . ident
  100              | NEW . ident brackexps

    error  shift, and go to state 94
    ID     shift, and go to state 5
    INT    shift, and go to state 12

    type   go to state 95
    ident  go to state 96


State 71

   60 name: THIS .

    $default  reduce using rule 60 (name)


State 72

   88 expression: PLUS . expression

    NUM     shift, and go to state 65
    LPAREN  shift, and go to state 66
    NULLT   shift, and go to state 68
    READ    shift, and go to state 69
    NEW     shift, and go to state 70
    THIS    shift, and go to state 71
    ID      shift, and go to state 5
    PLUS    shift, and go to state 72
    MINUS   shift, and go to state 73
    NOT     shift, and go to state 74

    ident          go to state 75
    number         go to state 76
    name           go to state 77
    expression     go to state 97
    newexpression  go to state 79


State 73

   79 expression: MINUS . expression

    NUM     shift, and go to state 65
    LPAREN  shift, and go to state 66
    NULLT   shift, and go to state 68
    READ    shift, and go to state 69
    NEW     shift, and go to state 70
    THIS    shift, and go to state 71
    ID      shift, and go to state 5
    PLUS    shift, and go to state 72
    MINUS   shift, and go to state 73
    NOT     shift, and go to state 74

    ident          go to state 75
    number         go to state 76
    name           go to state 77
    expression     go to state 98
    newexpression  go to state 79


State 74

   89 expression: NOT . expression

    NUM     shift, and go to state 65
    LPAREN  shift, and go to state 66
    NULLT   shift, and go to state 68
    READ    shift, and go to state 69
    NEW     shift, and go to state 70
    THIS    shift, and go to state 71
    ID      shift, and go to state 5
    PLUS    shift, and go to state 72
    MINUS   shift, and go to state 73
    NOT     shift, and go to state 74

    ident          go to state 75
    number         go to state 76
    name           go to state 77
    expression     go to state 99
    newexpression  go to state 79


State 75

   61 name: ident .

    $default  reduce using rule 61 (name)


State 76

   71 expression: number .

    $default  reduce using rule 71 (expression)


State 77

   62 name: name . DOT ident
   63     | name . LBRACK expression RBRACK
   64     | name . DOT THIS
   70 expression: name .
   73           | name . LPAREN arglist RPAREN

    LPAREN  shift, and go to state 100
    LBRACK  shift, and go to state 101
    DOT     shift, and go to state 102

    $default  reduce using rule 70 (expression)


State 78

   74 expression: expression . PLUS expression
   75           | expression . MINUS expression
   76           | expression . TIMES expression
   77           | expression . DIV expression
   78           | expression . EXP expression
   81           | expression . OR expression
   82           | expression . EQ expression
   83           | expression . NE expression
   84           | expression . GE expression
   85           | expression . LE expression
   86           | expression . GT expression
   87           | expression . LT expression
   90           | expression . MOD expression
   91           | expression . AND expression
   92           | expression . EQUAL expression
  101 brackexps: LBRACK expression . RBRACK
  102          | LBRACK expression . RBRACK brackexps

    RBRACK  shift, and go to state 103
    PLUS    shift, and go to state 104
    MINUS   shift, and go to state 105
    TIMES   shift, and go to state 106
    DIV     shift, and go to state 107
    MOD     shift, and go to state 108
    AND     shift, and go to state 109
    OR      shift, and go to state 110
    EQ      shift, and go to state 111
    NE      shift, and go to state 112
    LE      shift, and go to state 113
    GE      shift, and go to state 114
    LT      shift, and go to state 115
    GT      shift, and go to state 116
    EXP     shift, and go to state 117
    EQUAL   shift, and go to state 118


State 79

   93 expression: newexpression .

    $default  reduce using rule 93 (expression)


State 80

   27 methstart: type ident LPAREN .

    $default  reduce using rule 27 (methstart)


State 81

   20 vardeclaration: type ident SEMI .

    $default  reduce using rule 20 (vardeclaration)


State 82

   22 vardeclaration: type brackexps ident . SEMI

    SEMI  shift, and go to state 119


State 83

  105 multibracks: multibracks LBRACK . RBRACK

    RBRACK  shift, and go to state 120


State 84

   28 methstart: ident ident LPAREN .

    $default  reduce using rule 28 (methstart)


State 85

   21 vardeclaration: ident ident SEMI .

    $default  reduce using rule 21 (vardeclaration)


State 86

   23 vardeclaration: ident brackexps ident . SEMI

    SEMI  shift, and go to state 121


State 87

    6 classbody: LBRACE vardecs constdecs methdecs RBRACE .

    $default  reduce using rule 6 (classbody)


State 88

   38 block: LBRACE . RBRACE
   39      | LBRACE . vardecs statements RBRACE
   40      | LBRACE . vardecs RBRACE
   41      | LBRACE . statements RBRACE
   42      | LBRACE . error RBRACE

    error   shift, and go to state 122
    LBRACE  shift, and go to state 123
    RBRACE  shift, and go to state 124
    THIS    shift, and go to state 71
    SEMI    shift, and go to state 125
    ID      shift, and go to state 5
    INT     shift, and go to state 12
    PRINT   shift, and go to state 126
    WHILE   shift, and go to state 127
    RETURN  shift, and go to state 128
    IF      shift, and go to state 129

    vardecs               go to state 130
    vardeclaration        go to state 17
    type                  go to state 131
    ident                 go to state 132
    statements            go to state 133
    statement             go to state 134
    blockstart            go to state 135
    blockstacked          go to state 136
    name                  go to state 137
    conditionalstatement  go to state 138


State 89

   25 consbody: parameterlist RPAREN block .

    $default  reduce using rule 25 (consbody)


State 90

   35 parameterlist: parameterlist COMMA parameter .

    $default  reduce using rule 35 (parameterlist)


State 91

   26 methbody: parameterlist RPAREN block .

    $default  reduce using rule 26 (methbody)


State 92

   74 expression: expression . PLUS expression
   75           | expression . MINUS expression
   76           | expression . TIMES expression
   77           | expression . DIV expression
   78           | expression . EXP expression
   81           | expression . OR expression
   82           | expression . EQ expression
   83           | expression . NE expression
   84           | expression . GE expression
   85           | expression . LE expression
   86           | expression . GT expression
   87           | expression . LT expression
   90           | expression . MOD expression
   91           | expression . AND expression
   92           | expression . EQUAL expression
   94           | LPAREN expression . RPAREN

    RPAREN  shift, and go to state 139
    PLUS    shift, and go to state 104
    MINUS   shift, and go to state 105
    TIMES   shift, and go to state 106
    DIV     shift, and go to state 107
    MOD     shift, and go to state 108
    AND     shift, and go to state 109
    OR      shift, and go to state 110
    EQ      shift, and go to state 111
    NE      shift, and go to state 112
    LE      shift, and go to state 113
    GE      shift, and go to state 114
    LT      shift, and go to state 115
    GT      shift, and go to state 116
    EXP     shift, and go to state 117
    EQUAL   shift, and go to state 118


State 93

   80 expression: READ LPAREN . RPAREN

    RPAREN  shift, and go to state 140


State 94

   98 newexpression: NEW error .

    $default  reduce using rule 98 (newexpression)


State 95

   96 newexpression: NEW type .
   97              | NEW type . brackexps

    LBRACK  shift, and go to state 43

    $default  reduce using rule 96 (newexpression)

    brackexps    go to state 141
    multibracks  go to state 46


State 96

   95 newexpression: NEW ident . LPAREN arglist RPAREN
   99              | NEW ident .
  100              | NEW ident . brackexps

    LPAREN  shift, and go to state 142
    LBRACK  shift, and go to state 43

    $default  reduce using rule 99 (newexpression)

    brackexps    go to state 143
    multibracks  go to state 46


State 97

   74 expression: expression . PLUS expression
   75           | expression . MINUS expression
   76           | expression . TIMES expression
   77           | expression . DIV expression
   78           | expression . EXP expression
   81           | expression . OR expression
   82           | expression . EQ expression
   83           | expression . NE expression
   84           | expression . GE expression
   85           | expression . LE expression
   86           | expression . GT expression
   87           | expression . LT expression
   88           | PLUS expression .
   90           | expression . MOD expression
   91           | expression . AND expression
   92           | expression . EQUAL expression

    EXP    shift, and go to state 117
    EQUAL  shift, and go to state 118

    $default  reduce using rule 88 (expression)


State 98

   74 expression: expression . PLUS expression
   75           | expression . MINUS expression
   76           | expression . TIMES expression
   77           | expression . DIV expression
   78           | expression . EXP expression
   79           | MINUS expression .
   81           | expression . OR expression
   82           | expression . EQ expression
   83           | expression . NE expression
   84           | expression . GE expression
   85           | expression . LE expression
   86           | expression . GT expression
   87           | expression . LT expression
   90           | expression . MOD expression
   91           | expression . AND expression
   92           | expression . EQUAL expression

    EXP    shift, and go to state 117
    EQUAL  shift, and go to state 118

    $default  reduce using rule 79 (expression)


State 99

   74 expression: expression . PLUS expression
   75           | expression . MINUS expression
   76           | expression . TIMES expression
   77           | expression . DIV expression
   78           | expression . EXP expression
   81           | expression . OR expression
   82           | expression . EQ expression
   83           | expression . NE expression
   84           | expression . GE expression
   85           | expression . LE expression
   86           | expression . GT expression
   87           | expression . LT expression
   89           | NOT expression .
   90           | expression . MOD expression
   91           | expression . AND expression
   92           | expression . EQUAL expression

    EXP    shift, and go to state 117
    EQUAL  shift, and go to state 118

    $default  reduce using rule 89 (expression)


State 100

   73 expression: name LPAREN . arglist RPAREN

    NUM     shift, and go to state 65
    LPAREN  shift, and go to state 66
    NULLT   shift, and go to state 68
    READ    shift, and go to state 69
    NEW     shift, and go to state 70
    THIS    shift, and go to state 71
    ID      shift, and go to state 5
    PLUS    shift, and go to state 72
    MINUS   shift, and go to state 73
    NOT     shift, and go to state 74

    $default  reduce using rule 65 (arglist)

    ident          go to state 75
    number         go to state 76
    name           go to state 77
    arglist        go to state 144
    expression     go to state 145
    newexpression  go to state 79


State 101

   63 name: name LBRACK . expression RBRACK

    NUM     shift, and go to state 65
    LPAREN  shift, and go to state 66
    NULLT   shift, and go to state 68
    READ    shift, and go to state 69
    NEW     shift, and go to state 70
    THIS    shift, and go to state 71
    ID      shift, and go to state 5
    PLUS    shift, and go to state 72
    MINUS   shift, and go to state 73
    NOT     shift, and go to state 74

    ident          go to state 75
    number         go to state 76
    name           go to state 77
    expression     go to state 146
    newexpression  go to state 79


State 102

   62 name: name DOT . ident
   64     | name DOT . THIS

    THIS  shift, and go to state 147
    ID    shift, and go to state 5

    ident  go to state 148


State 103

  101 brackexps: LBRACK expression RBRACK .
  102          | LBRACK expression RBRACK . brackexps

    LBRACK  shift, and go to state 43

    $default  reduce using rule 101 (brackexps)

    brackexps    go to state 149
    multibracks  go to state 46


State 104

   74 expression: expression PLUS . expression

    NUM     shift, and go to state 65
    LPAREN  shift, and go to state 66
    NULLT   shift, and go to state 68
    READ    shift, and go to state 69
    NEW     shift, and go to state 70
    THIS    shift, and go to state 71
    ID      shift, and go to state 5
    PLUS    shift, and go to state 72
    MINUS   shift, and go to state 73
    NOT     shift, and go to state 74

    ident          go to state 75
    number         go to state 76
    name           go to state 77
    expression     go to state 150
    newexpression  go to state 79


State 105

   75 expression: expression MINUS . expression

    NUM     shift, and go to state 65
    LPAREN  shift, and go to state 66
    NULLT   shift, and go to state 68
    READ    shift, and go to state 69
    NEW     shift, and go to state 70
    THIS    shift, and go to state 71
    ID      shift, and go to state 5
    PLUS    shift, and go to state 72
    MINUS   shift, and go to state 73
    NOT     shift, and go to state 74

    ident          go to state 75
    number         go to state 76
    name           go to state 77
    expression     go to state 151
    newexpression  go to state 79


State 106

   76 expression: expression TIMES . expression

    NUM     shift, and go to state 65
    LPAREN  shift, and go to state 66
    NULLT   shift, and go to state 68
    READ    shift, and go to state 69
    NEW     shift, and go to state 70
    THIS    shift, and go to state 71
    ID      shift, and go to state 5
    PLUS    shift, and go to state 72
    MINUS   shift, and go to state 73
    NOT     shift, and go to state 74

    ident          go to state 75
    number         go to state 76
    name           go to state 77
    expression     go to state 152
    newexpression  go to state 79


State 107

   77 expression: expression DIV . expression

    NUM     shift, and go to state 65
    LPAREN  shift, and go to state 66
    NULLT   shift, and go to state 68
    READ    shift, and go to state 69
    NEW     shift, and go to state 70
    THIS    shift, and go to state 71
    ID      shift, and go to state 5
    PLUS    shift, and go to state 72
    MINUS   shift, and go to state 73
    NOT     shift, and go to state 74

    ident          go to state 75
    number         go to state 76
    name           go to state 77
    expression     go to state 153
    newexpression  go to state 79


State 108

   90 expression: expression MOD . expression

    NUM     shift, and go to state 65
    LPAREN  shift, and go to state 66
    NULLT   shift, and go to state 68
    READ    shift, and go to state 69
    NEW     shift, and go to state 70
    THIS    shift, and go to state 71
    ID      shift, and go to state 5
    PLUS    shift, and go to state 72
    MINUS   shift, and go to state 73
    NOT     shift, and go to state 74

    ident          go to state 75
    number         go to state 76
    name           go to state 77
    expression     go to state 154
    newexpression  go to state 79


State 109

   91 expression: expression AND . expression

    NUM     shift, and go to state 65
    LPAREN  shift, and go to state 66
    NULLT   shift, and go to state 68
    READ    shift, and go to state 69
    NEW     shift, and go to state 70
    THIS    shift, and go to state 71
    ID      shift, and go to state 5
    PLUS    shift, and go to state 72
    MINUS   shift, and go to state 73
    NOT     shift, and go to state 74

    ident          go to state 75
    number         go to state 76
    name           go to state 77
    expression     go to state 155
    newexpression  go to state 79


State 110

   81 expression: expression OR . expression

    NUM     shift, and go to state 65
    LPAREN  shift, and go to state 66
    NULLT   shift, and go to state 68
    READ    shift, and go to state 69
    NEW     shift, and go to state 70
    THIS    shift, and go to state 71
    ID      shift, and go to state 5
    PLUS    shift, and go to state 72
    MINUS   shift, and go to state 73
    NOT     shift, and go to state 74
